<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@color/iconos"
    tools:context=".MenuActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="16dp">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnSaludo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/cardview_dark_background"
            android:text="@string/saludo"
            android:textColor="@color/white" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="16dp">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnFrame"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:background="@color/cardview_dark_background"
            android:text="@string/frame"
            android:textColor="@color/white" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="16dp">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnLinear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:background="@color/cardview_dark_background"
            android:text="@string/linear"
            android:textColor="@color/white" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="16dp">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnConstraint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:background="@color/cardview_dark_background"
            android:text="@string/constraint"
            android:textColor="@color/white" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="16dp">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnIMC"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:background="@color/cardview_dark_background"
            android:text="@string/imc"
            android:textColor="@color/white" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="16dp">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnTareas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:background="@color/cardview_dark_background"
            android:text="@string/tareas"
            android:textColor="@color/white" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="16dp">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:background="@color/cardview_dark_background"
            android:text="@string/recyclerView"
            android:textColor="@color/white" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="16dp">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnHeroes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:background="@color/cardview_dark_background"
            android:text="@string/heroes"
            android:textColor="@color/white" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="16dp">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnConfiguraciones"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:background="@color/cardview_dark_background"
            android:text="@string/configuraciones"
            android:textColor="@color/white" />

    </androidx.cardview.widget.CardView>

</androidx.appcompat.widget.LinearLayoutCompat>