<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.LinearLayoutCompat

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/tareas_background_tareas_app"
        android:orientation="vertical"
        tools:context=".tareasApp.TareasActivity">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="32dp"
            android:layout_marginVertical="42dp"
            android:text="@string/tareas_titulo"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            style="@style/tareasSubtitulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tareas_categorias" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvCategorias"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            style="@style/tareasSubtitulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="16dp"
            android:text="@string/tareas_tasks" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvTasks"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="32dp" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btnAddTasks"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="32dp"
        android:src="@android:drawable/ic_input_add"
        android:layout_gravity="end|bottom"
        app:backgroundTint="@color/tareas_accent"
        app:fabSize="normal"
        app:tint="@color/white" />

</FrameLayout>